Add BOOT_JVM_OPTIONS for faster builds